# sample-lambda

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: dev.yaml
app/: config.py  main.py
