[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
# boto3는 Lambda 런타임에 기본 포함. 로컬 실행 시에만 필요.
boto3 = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
